--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="minimalisti.css">
-		<link rel="stylesheet" href="stylesheet.css">
+		<link rel="stylesheet" href="css/minimalisti.css">
+		<link rel="stylesheet" href="css/stylesheet.css">
 
 	</head>
 
@@ -18,6 +18,44 @@
 				<h1>Laser Harp</h1>
 			</div>
 		</header>
+		<main class="container">
+			<section class="row">
+				<svg viewBox="0 0 328 150">
+				<rect x="12.96" y="1.81" width="301.54" height="137"></rect>
+				<rect x="25.62" y="15.89" width="277.14" height="111.42"></rect>
+				<rect x="1.52" y="144.11" width="325.43" height="3.91"></rect>
+				<line x1="1.34" y1="143.80" x2="13.15" y2="138.58"></line>
+				<line x1="313.70" y1="138.58" x2="326.99" y2="143.74"></line>
+				<rect x="34.51" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="44.75" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="54.99" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="65.23" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="75.47" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="85.71" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="95.95" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="106.19" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="116.42" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="126.66" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="136.90" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="147.14" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="157.38" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="167.62" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="177.86" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="188.10" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="198.34" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="208.57" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="218.81" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="229.05" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="239.29" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="249.53" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="259.43" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="269.67" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="279.91" y="16.1" width="2.98" height="1.75" ></rect>
+				<rect x="290.14" y="16.1" width="2.98" height="1.75" ></rect>
+				<text font-size="24" x="94.5" y="118.7">By GDG Žďár</text>
+				</svg>
+			</section>
+		</main>
 	</body>
 
 </html>
