--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<rect x="269.67" y="16.1" width="2.98" height="1.75" ></rect>
 				<rect x="279.91" y="16.1" width="2.98" height="1.75" ></rect>
 				<rect x="290.14" y="16.1" width="2.98" height="1.75" ></rect>
-				<text font-size="24" x="94.5" y="118.7">By GDG Žďár</text>
+				<text font-size="18" x="164" y="118.7" text-anchor="middle">By GDG Žďár</text>
 				</svg>
 			</section>
 		</main>
