create content structure

--- a/index.html
+++ b/index.html
@@ -55,6 +55,42 @@
 				<text font-size="18" x="164" y="118.7" text-anchor="middle">By GDG Žďár</text>
 				</svg>
 			</section>
+			<section class="row">
+				<h2>About</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</section>
+			<section class="row">
+				<h2>Progress</h2>
+				<p>Is nisi ut aliquip ex ea commodo voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Some photos of making the harp:</p>
+				<img src="images/progress-1" alt="harp - making of - photo 1">
+				<img src="images/progress-2" alt="harp - making of - photo 2">
+				<img src="images/progress-3" alt="harp - making of - photo 3">
+				<img src="images/progress-4" alt="harp - making of - photo 4">
+				<img src="images/progress-5" alt="harp - making of - photo 5">
+				<img src="images/progress-6" alt="harp - making of - photo 6">
+				<img src="images/progress-7" alt="harp - making of - photo 7">
+				<img src="images/progress-8" alt="harp - making of - photo 8">
+				<img src="images/progress-9" alt="harp - making of - photo 9">
+			</section>
+			<section class="row">
+				<h2>Demo</h2>
+				<p>There will be a video of someone playing the laser harp:</p>
+				<video>
+					<source src="videos/harp.mp4" type="video/mp4">
+					<img src="images/harp.jpg" alt="laser harp photo">
+				</video>
+			</section>
+			<section class="row">
+				<h2>Team</h2>
+				<p>and a nice team photo here:</p>
+				<img src="images/team.jpg" alt="laser harp project team">
+			</section>
 		</main>
 	</body>
 
