--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<link rel="stylesheet" href="css/minimalisti.css">
 		<link rel="stylesheet" href="css/stylesheet.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
 
 	</head>
 
@@ -64,19 +66,19 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</section>
-			<section class="row">
+			<section class="row" id="progress">
 				<h2>Progress</h2>
 				<p>Is nisi ut aliquip ex ea commodo voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<p>Some photos of making the harp:</p>
-				<img src="images/progress-1" alt="harp - making of - photo 1">
-				<img src="images/progress-2" alt="harp - making of - photo 2">
-				<img src="images/progress-3" alt="harp - making of - photo 3">
-				<img src="images/progress-4" alt="harp - making of - photo 4">
-				<img src="images/progress-5" alt="harp - making of - photo 5">
-				<img src="images/progress-6" alt="harp - making of - photo 6">
-				<img src="images/progress-7" alt="harp - making of - photo 7">
-				<img src="images/progress-8" alt="harp - making of - photo 8">
-				<img src="images/progress-9" alt="harp - making of - photo 9">
+				<a href="images/progress-1.jpg" data-lightbox="image-progress"><img src="images/progress-1.jpg" alt="harp - making of - photo 1"></a>
+				<a href="images/progress-2.jpg" data-lightbox="image-progress"><img src="images/progress-2.jpg" alt="harp - making of - photo 2"></a>
+				<a href="images/progress-3.jpg" data-lightbox="image-progress"><img src="images/progress-3.jpg" alt="harp - making of - photo 3"></a>
+				<a href="images/progress-4.jpg" data-lightbox="image-progress"><img src="images/progress-4.jpg" alt="harp - making of - photo 4"></a>
+				<a href="images/progress-5.jpg" data-lightbox="image-progress"><img src="images/progress-5.jpg" alt="harp - making of - photo 5"></a>
+				<a href="images/progress-6.jpg" data-lightbox="image-progress"><img src="images/progress-6.jpg" alt="harp - making of - photo 6"></a>
+				<a href="images/progress-7.jpg" data-lightbox="image-progress"><img src="images/progress-7.jpg" alt="harp - making of - photo 7"></a>
+				<a href="images/progress-8.jpg" data-lightbox="image-progress"><img src="images/progress-8.jpg" alt="harp - making of - photo 8"></a>
+				<a href="images/progress-9.jpg" data-lightbox="image-progress"><img src="images/progress-9.jpg" alt="harp - making of - photo 9"></a>
 			</section>
 			<section class="row">
 				<h2>Demo</h2>
@@ -92,6 +94,9 @@
 				<img src="images/team.jpg" alt="laser harp project team">
 			</section>
 		</main>
+
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox-plus-jquery.min.js"></script>
+
 	</body>
 
 </html>
