--- a/index.html
+++ b/index.html
@@ -66,26 +66,27 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</section>
-			<section class="row" id="progress">
+			<section class="row">
 				<h2>Progress</h2>
 				<p>Is nisi ut aliquip ex ea commodo voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<p>Some photos of making the harp:</p>
-				<a href="images/progress-1.jpg" data-lightbox="image-progress"><img src="images/progress-1.jpg" alt="harp - making of - photo 1"></a>
-				<a href="images/progress-2.jpg" data-lightbox="image-progress"><img src="images/progress-2.jpg" alt="harp - making of - photo 2"></a>
-				<a href="images/progress-3.jpg" data-lightbox="image-progress"><img src="images/progress-3.jpg" alt="harp - making of - photo 3"></a>
-				<a href="images/progress-4.jpg" data-lightbox="image-progress"><img src="images/progress-4.jpg" alt="harp - making of - photo 4"></a>
-				<a href="images/progress-5.jpg" data-lightbox="image-progress"><img src="images/progress-5.jpg" alt="harp - making of - photo 5"></a>
-				<a href="images/progress-6.jpg" data-lightbox="image-progress"><img src="images/progress-6.jpg" alt="harp - making of - photo 6"></a>
-				<a href="images/progress-7.jpg" data-lightbox="image-progress"><img src="images/progress-7.jpg" alt="harp - making of - photo 7"></a>
-				<a href="images/progress-8.jpg" data-lightbox="image-progress"><img src="images/progress-8.jpg" alt="harp - making of - photo 8"></a>
-				<a href="images/progress-9.jpg" data-lightbox="image-progress"><img src="images/progress-9.jpg" alt="harp - making of - photo 9"></a>
+				<div class="gallery">
+					<a href="images/progress-1.jpg" data-lightbox="image-progress"><img src="images/progress-1.jpg" alt="harp - making of - photo 1"></a>
+					<a href="images/progress-2.jpg" data-lightbox="image-progress"><img src="images/progress-2.jpg" alt="harp - making of - photo 2"></a>
+					<a href="images/progress-3.jpg" data-lightbox="image-progress"><img src="images/progress-3.jpg" alt="harp - making of - photo 3"></a>
+					<a href="images/progress-4.jpg" data-lightbox="image-progress"><img src="images/progress-4.jpg" alt="harp - making of - photo 4"></a>
+					<a href="images/progress-5.jpg" data-lightbox="image-progress"><img src="images/progress-5.jpg" alt="harp - making of - photo 5"></a>
+					<a href="images/progress-6.jpg" data-lightbox="image-progress"><img src="images/progress-6.jpg" alt="harp - making of - photo 6"></a>
+					<a href="images/progress-7.jpg" data-lightbox="image-progress"><img src="images/progress-7.jpg" alt="harp - making of - photo 7"></a>
+					<a href="images/progress-8.jpg" data-lightbox="image-progress"><img src="images/progress-8.jpg" alt="harp - making of - photo 8"></a>
+					<a href="images/progress-9.jpg" data-lightbox="image-progress"><img src="images/progress-9.jpg" alt="harp - making of - photo 9"></a>
+				</div>
 			</section>
 			<section class="row">
 				<h2>Demo</h2>
 				<p>There will be a video of someone playing the laser harp:</p>
-				<video>
+				<video poster="images/harp.jpg" controls>
 					<source src="videos/harp.mp4" type="video/mp4">
-					<img src="images/harp.jpg" alt="laser harp photo">
 				</video>
 			</section>
 			<section class="row">
