add team profiles template

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 				<h2>Progress</h2>
 				<p>Is nisi ut aliquip ex ea commodo voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<p>Some photos of making the harp:</p>
-				<div class="gallery">
-					<a href="images/progress-1.jpg" data-lightbox="image-progress"><img src="images/progress-1.jpg" alt="harp - making of - photo 1"></a>
-					<a href="images/progress-2.jpg" data-lightbox="image-progress"><img src="images/progress-2.jpg" alt="harp - making of - photo 2"></a>
-					<a href="images/progress-3.jpg" data-lightbox="image-progress"><img src="images/progress-3.jpg" alt="harp - making of - photo 3"></a>
-					<a href="images/progress-4.jpg" data-lightbox="image-progress"><img src="images/progress-4.jpg" alt="harp - making of - photo 4"></a>
-					<a href="images/progress-5.jpg" data-lightbox="image-progress"><img src="images/progress-5.jpg" alt="harp - making of - photo 5"></a>
-					<a href="images/progress-6.jpg" data-lightbox="image-progress"><img src="images/progress-6.jpg" alt="harp - making of - photo 6"></a>
-					<a href="images/progress-7.jpg" data-lightbox="image-progress"><img src="images/progress-7.jpg" alt="harp - making of - photo 7"></a>
-					<a href="images/progress-8.jpg" data-lightbox="image-progress"><img src="images/progress-8.jpg" alt="harp - making of - photo 8"></a>
-					<a href="images/progress-9.jpg" data-lightbox="image-progress"><img src="images/progress-9.jpg" alt="harp - making of - photo 9"></a>
+				<div class="gallery progress">
+					<a href="images/progress/progress-1.jpg" data-lightbox="image-progress"><img src="images/progress/progress-1.jpg" alt="harp - making of - photo 1"></a>
+					<a href="images/progress/progress-2.jpg" data-lightbox="image-progress"><img src="images/progress/progress-2.jpg" alt="harp - making of - photo 2"></a>
+					<a href="images/progress/progress-3.jpg" data-lightbox="image-progress"><img src="images/progress/progress-3.jpg" alt="harp - making of - photo 3"></a>
+					<a href="images/progress/progress-4.jpg" data-lightbox="image-progress"><img src="images/progress/progress-4.jpg" alt="harp - making of - photo 4"></a>
+					<a href="images/progress/progress-5.jpg" data-lightbox="image-progress"><img src="images/progress/progress-5.jpg" alt="harp - making of - photo 5"></a>
+					<a href="images/progress/progress-6.jpg" data-lightbox="image-progress"><img src="images/progress/progress-6.jpg" alt="harp - making of - photo 6"></a>
+					<a href="images/progress/progress-7.jpg" data-lightbox="image-progress"><img src="images/progress/progress-7.jpg" alt="harp - making of - photo 7"></a>
+					<a href="images/progress/progress-8.jpg" data-lightbox="image-progress"><img src="images/progress/progress-8.jpg" alt="harp - making of - photo 8"></a>
+					<a href="images/progress/progress-9.jpg" data-lightbox="image-progress"><img src="images/progress/progress-9.jpg" alt="harp - making of - photo 9"></a>
 				</div>
 			</section>
 			<section class="row">
@@ -92,7 +92,81 @@
 			<section class="row">
 				<h2>Team</h2>
 				<p>and a nice team photo here:</p>
-				<img src="images/team.jpg" alt="laser harp project team">
+				<img src="images/team/team.jpg" alt="laser harp project team">
+				<div class="gallery profiles">
+					<div>
+						<div>
+							<a href="">
+								<img src="images/team/jan-cerny.jpg" alt="profile photo - Jan Černý">
+								<h3>Jan Černý</h3>
+								<span>Team leader</span>
+							</a>
+						</div>
+					</div>
+					<div>
+						<div>
+							<a href="">
+								<img src="images/team/vaclav-pavlicek.jpg" alt="profile photo - Václav Pavlíček">
+								<h3>Václav Pavlíček</h3>
+								<span>Developer</span>
+							</a>
+						</div>
+					</div>
+					<div>
+						<div>
+							<a href="">
+								<img src="images/team/tomas-forejt.jpg" alt="profile photo - Tomáš Forejt">
+								<h3>Tomáš Forejt</h3>
+								<span>Electronics</span>
+							</a>
+						</div>
+					</div>
+					<div>
+						<div>
+							<a href="">
+								<img src="images/team/milan-forejt.jpg" alt="profile photo - Milan Forejt">
+								<h3>Milan Forejt</h3>
+								<span>Electronics</span>
+							</a>
+						</div>
+					</div>
+					<div>
+						<div>
+							<a href="">
+								<img src="images/team/marek-kadlcik.jpg" alt="profile photo - Marek Kadlčík">
+								<h3>Marek Kadlčík</h3>
+								<span>Designer / developer</span>
+							</a>
+						</div>
+					</div>
+					<div>
+						<div>
+							<a href="">
+								<img src="images/team/matej-horak.jpg" alt="profile photo - Matěj Horák">
+								<h3>Matěj Horák</h3>
+								<span>Code review</span>
+							</a>
+						</div>
+					</div>
+					<div>
+						<div>
+							<a href="">
+								<img src="images/team/jan-klement.jpg" alt="profile photo - Jan Klement">
+								<h3>Jan Klement</h3>
+								<span>Music consultant</span>
+							</a>
+						</div>
+					</div>
+					<div>
+						<div>
+							<a href="">
+								<img src="images/team/krystof-malek.jpg" alt="profile photo - Kryštof Málek">
+								<h3>Kryštof Málek</h3>
+								<span>Handcrafting</span>
+							</a>
+						</div>
+					</div>
+				</div>
 			</section>
 		</main>
 
