add sample-code section template

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Laser Harp</title>
 
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin-ext,latin' rel='stylesheet'>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -87,6 +87,14 @@
 				<video poster="images/harp.jpg" controls>
 					<source src="videos/harp.mp4" type="video/mp4">
 				</video>
+			</section>
+			<section class="row">
+				<h2>Sample code</h2>
+				<p>We used Arduino language, C++ and Python to make this project. Here is our repository on github: <a href="http://github.com/gdgzdar/Laser-harp">github.com/gdgzdar/Laser-harp</a>. I'd place a piece of code here:</p>
+				<code>
+					<pre>
+Some code here</pre>
+				</code>
 			</section>
 			<section class="row">
 				<h2>Team</h2>
