--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Laser Harp</title>
 
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin-ext,latin' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,200&subset=latin-ext,latin' rel='stylesheet'>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
