Add team members links

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Some code here</pre>
 					</div>
 					<div>
 						<div>
-							<a href="">
+							<a href="https://plus.google.com/+V%C3%A1clavPavl%C3%AD%C4%8Dek">
 								<img src="images/team/vaclav-pavlicek.jpg" alt="profile photo - Václav Pavlíček">
 								<h3>Václav Pavlíček</h3>
 								<span>Developer</span>
@@ -139,7 +139,7 @@ Some code here</pre>
 					</div>
 					<div>
 						<div>
-							<a href="">
+							<a href="http://marekkadlcik.com">
 								<img src="images/team/marek-kadlcik.jpg" alt="profile photo - Marek Kadlčík">
 								<h3>Marek Kadlčík</h3>
 								<span>Designer / developer</span>
@@ -148,7 +148,7 @@ Some code here</pre>
 					</div>
 					<div>
 						<div>
-							<a href="">
+							<a href="http://horm.cz">
 								<img src="images/team/matej-horak.jpg" alt="profile photo - Matěj Horák">
 								<h3>Matěj Horák</h3>
 								<span>Code review</span>
