Add Milan Lempera to the team section

--- a/index.html
+++ b/index.html
@@ -173,6 +173,15 @@ Some code here</pre>
 							</a>
 						</div>
 					</div>
+					<div>
+						<div>
+							<a href="https://www.linkedin.com/in/milanlempera">
+								<img src="images/team/milan-lempera.jpg" alt="profile photo - Milan Lempera">
+								<h3>Milan Lempera</h3>
+								<span>HW designer / review</span>
+							</a>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
