--- a/index.html
+++ b/index.html
@@ -58,12 +58,10 @@
 			</section>
 			<section class="row">
 				<h2>About</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Laser Harp is a musical instrument for geeks. The harp can play many types of sounds for example
+					Violin, Iron, Oldschool techno and so on. Hardware are controlled by Arduino components and user
+					controller for changing sounds is written in Python. This project was created by attendees of GDG
+					Garage Žďár n. S.</p>
 			</section>
 			<section class="row">
 				<h2>Progress</h2>
